QSDM/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: QSD
  labels:
    name: QSD
    app: QSD
